<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.DetailsActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/tvDetailsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"
                android:textAlignment="center"
                android:textSize="40sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tvDetailsTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />

            <TextView
                android:id="@+id/tvDetailsIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailsingredients"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:textSize="30sp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />
            <TextView
                android:id="@+id/tvDetailsIngredientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholderingredient"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:paddingStart="40dp"
                android:paddingEnd="10dp"
                />
            <TextView
                android:id="@+id/tvDetailsInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:textSize="30sp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />
            <TextView
                android:id="@+id/tvDetailsInstructionsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholderinstruction"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:paddingStart="40dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="30dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>